Fixed hero alignment
Made the hero text align with the curriculum page content

--- a/static/styles/curriculum.css
+++ b/static/styles/curriculum.css
@@ -15,7 +15,7 @@ img.icon + h2 {
 }
 
 .block {
-    padding: 20px 20px;
+    padding: 20px 0px;
 }
 
 .block .title {
